--- a/demo.html
+++ b/demo.html
@@ -43,6 +43,10 @@
 
 <script>
 
+
+    //元素周期表坐标 118
+    var table_p_xy = [[1, 1], [18, 1], [1, 2], [2, 2], [13, 2], [14, 2], [15, 2], [16, 2], [17, 2], [18, 2], [1, 3], [2, 3], [13, 3], [14, 3], [15, 3], [16, 3], [17, 3], [18, 3], [1, 4], [2, 4], [3, 4], [4, 4], [5, 4], [6, 4], [7, 4], [8, 4], [9, 4], [10, 4], [11, 4], [12, 4], [13, 4], [14, 4], [15, 4], [16, 4], [17, 4], [18, 4], [1, 5], [2, 5], [3, 5], [4, 5], [5, 5], [6, 5], [7, 5], [8, 5], [9, 5], [10, 5], [11, 5], [12, 5], [13, 5], [14, 5], [15, 5], [16, 5], [17, 5], [18, 5], [1, 6], [2, 6], [4, 9], [5, 9], [6, 9], [7, 9], [8, 9], [9, 9], [10, 9], [11, 9], [12, 9], [13, 9], [14, 9], [15, 9], [16, 9], [17, 9], [18, 9], [4, 6], [5, 6], [6, 6], [7, 6], [8, 6], [9, 6], [10, 6], [11, 6], [12, 6], [13, 6], [14, 6], [15, 6], [16, 6], [17, 6], [18, 6], [1, 7], [2, 7], [4, 10], [5, 10], [6, 10], [7, 10], [8, 10], [9, 10], [10, 10], [11, 10], [12, 10], [13, 10], [14, 10], [15, 10], [16, 10], [17, 10], [18, 10], [4, 7], [5, 7], [6, 7], [7, 7], [8, 7], [9, 7], [10, 7], [11, 7], [12, 7], [13, 7], [14, 7], [15, 7], [16, 7], [17, 7], [18, 7]];
+
     var CurPersonNum = 30;
     var threeStop = false;
 
@@ -93,7 +97,7 @@
             'image':'touxiang.jpg'
         }*/
     ];
-    for (var i = 0; i < 120; i++) {
+    for (var i = 0; i < 118; i++) {
         table.push({
             'name': i,
             'p_x': i % 15 + 1,
@@ -160,6 +164,9 @@
      * 卡片初始化
      */
     function initCard(objects) {
+
+        targets.sphere = targets.helix = targets.grid = [];
+
         // sphere
         var vector = new THREE.Vector3();
         for (var i = 0, l = objects.length; i < l; i++) {
